mute nuisance build due to gfortran 9.2.0 bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
-# 3.12 for find_ROOT, 3.13 for a lot of user functions, 3.14 for check_fortran_source_runs & fetchcontent
+# 3.14 for check_fortran_source_runs & fetchcontent
 # 3.15 for robust Python finding
 
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
