job.py remove unused code
add fallback single-file h5diff-based compare cmake test

nc4fortran 0.3.0

default netcdf on with fallback dummy

web.py: only checksum if downloading

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -35,41 +35,13 @@ TIMEOUT 10)
 # --- io
 add_library(io OBJECT io.f90 output.f90
 aurora.f90 aurora_raw.f90 aurora_hdf5.f90 aurora_ncdf.f90
-mag.f90
-plasma.f90)
+mag.f90 mag_hdf5.f90 mag_ncdf.f90 mag_raw.f90
+plasma_input.f90 plasma_input_hdf5.f90 plasma_input_ncdf.f90 plasma_input_raw.f90
+plasma_output.f90 plasma_output_hdf5.f90 plasma_output_ncdf.f90 plasma_output_raw.f90)
 
-target_link_libraries(io PRIVATE calculus const reader grid mpimod timeutils)
-
-if(hdf5)
-  target_sources(io PRIVATE plasma_input_hdf5.f90 plasma_output_hdf5.f90 mag_hdf5.f90)
-  target_link_libraries(io PUBLIC h5fortran::h5fortran)
-endif()
-
-if(netcdf)
-  target_sources(io PRIVATE plasma_input_ncdf.f90 plasma_output_ncdf.f90 mag_ncdf.f90)
-  target_include_directories(io PUBLIC ${NetCDF_INCLUDE_DIRS})
-  target_link_libraries(io PUBLIC nc4fortran ${NetCDF_LIBRARIES})
-endif()
-
-if(NOT hdf5 AND NOT netcdf)
-  target_sources(io PRIVATE plasma_input_raw.f90 plasma_output_raw.f90 mag_raw.f90)
-endif()
-
+target_link_libraries(io PRIVATE calculus const reader grid mpimod timeutils
+ h5fortran::h5fortran nc4fortran::nc4fortran)
 
 # --- reader
-add_library(reader OBJECT reader.f90)
-target_link_libraries(reader PRIVATE const)
-
-if(hdf5)
-  target_sources(reader PRIVATE reader_hdf5.f90)
-  target_link_libraries(reader PRIVATE h5fortran::h5fortran)
-endif()
-
-if(netcdf)
-  target_sources(reader PRIVATE reader_nc4.f90)
-  target_link_libraries(reader PRIVATE nc4fortran::nc4fortran)
-endif()
-
-if(NOT hdf5 AND NOT netcdf)
-  target_sources(reader PRIVATE reader_raw.f90)
-endif()
+add_library(reader OBJECT reader.f90 reader_hdf5.f90 reader_ncdf.f90 reader_raw.f90)
+target_link_libraries(reader PRIVATE const pathlib h5fortran::h5fortran nc4fortran::nc4fortran)
