add netcdf simsize reader test
add netcdf simsize reader test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ endif()
 option(autobuild "autobuild missing Lapack, Scalapack or Mumps" on)
 option(glow "use NCAR GLOW airglow / aurora model" on)
 option(hdf5 "use HDF5 file I/O" on)
-option(netcdf "use NetCDF file I/O" on)
+option(netcdf "use NetCDF file I/O" off)
 # MUMPS build options (only used if auto-building MUMPS)
 option(metis "MUMPS: use METIS" off)
 option(scotch "MUMPS: use Scotch" off)
