default hdf5, raw on but netcdf off

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -36,7 +36,7 @@ jobs:
         unzip ninja-linux.zip
 
     - name: CMake configure
-      run: cmake -G Ninja -DCMAKE_MAKE_PROGRAM=$(realpath ./ninja) -B build -Dhdf5=true
+      run: cmake -G Ninja -DCMAKE_MAKE_PROGRAM=$(realpath ./ninja) -B build
       env:
         FC: gfortran
     - run: cmake --build build --parallel
@@ -59,7 +59,6 @@ jobs:
       with:
         name: Linux_CMake_Testlog
         path: build/Testing/Temporary/LastTest.log
-
 
   cmakeBuildAllLibs:
     if: false
