--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -36,10 +36,7 @@ jobs:
         path: build/CMakeFiles/CMakeError.log
 
 # CI is too slow for 3d_glow
-    - run: ctest --parallel --output-on-failure -R unit
-      working-directory: build
-    - run: ctest --parallel --output-on-failure -R 2d_fang
-      working-directory: build
+    - run: ctest -S cdash.cmake -E 3d -V
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
