Squashed commit of the following:
commit b1305fe681209b384484a222f257aef2177535c4
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sun Mar 29 01:05:21 2020 -0400

    ci: macos python version workaround

commit b2f7d0bccd441dcb64cb740fa250d8d5516cfce6
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sun Mar 29 00:55:45 2020 -0400

    cmake lint

commit 4b561d14ff5d5f9f305cb7489667401ba0d68951
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sun Mar 29 00:26:54 2020 -0400

    cmake feature summary and test skip

commit 079b064df0d14f11c3660b4c4bf85e2f29343d88
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Mar 28 23:06:47 2020 -0400

    ci: use namelist

commit 7bdf81fb5a54240bff99692315c2b002ed38aff7
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Mar 28 23:06:47 2020 -0400

    ci: use namelist

commit 28d0cba40d5ff3e8e6697521107613e0a66db1c9
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Mar 28 23:06:30 2020 -0400

    ci: ninja

--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -1,6 +1,7 @@
 name: ci_debug_build
 env:
   CI: true
+  CMAKE_GENERATOR: Ninja
 
 on:
   push:
@@ -30,7 +31,7 @@ jobs:
         sudo apt update -yq
         sudo apt install -yq --no-install-recommends gfortran liblapack-dev libscalapack-openmpi-dev libmumps-dev libopenmpi-dev openmpi-bin libhdf5-dev
 
-    - run: cmake -B build -DCMAKE_BUILD_TYPE=Debug -G Ninja -DCMAKE_MAKE_PROGRAM=$(realpath ./ninja) -Dhdf5=true
+    - run: cmake -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_MAKE_PROGRAM=$(realpath ./ninja)
       env:
         FC: gfortran
     - run: cmake --build build
