--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -1,6 +1,7 @@
 name: ci_macos
 env:
   CI: true
+  CMAKE_GENERATOR: Ninja
 
 on:
   push:
@@ -19,8 +20,9 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
-        python-version: '3.x'
-    - run: pip install -e .
+        python-version: '3.7'
+    # leave as 3.7 to avoid pip install in 3.8 but run in 3.7
+    - run: python -m pip install -e .
     - run: brew install pkg-config ninja lapack open-mpi hdf5 scalapack
 
 # CI is too slow for 3d_glow
