--- a/src/ionization/CMakeLists.txt
+++ b/src/ionization/CMakeLists.txt
@@ -8,12 +8,11 @@ target_link_libraries(fang_run PRIVATE fang msis const)
 add_executable(test_fang test_fang.f90)
 target_link_libraries(test_fang PRIVATE fang fang_run const)
 
-add_test(NAME unit:fangIonize
-  COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_fang.py $<TARGET_FILE:test_fang>)
-set_tests_properties(unit:fangIonize PROPERTIES
-  TIMEOUT 10
-  DISABLED ${python_disabled})
-
+if(python_ok)
+  add_test(NAME unit:fangIonize
+    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_fang.py $<TARGET_FILE:test_fang>)
+  set_tests_properties(unit:fangIonize PROPERTIES TIMEOUT 10)
+endif(python_ok)
 
 if(glow)
   include(${PROJECT_SOURCE_DIR}/cmake/glow.cmake)
