--- a/src/numerical/diffusion/CMakeLists.txt
+++ b/src/numerical/diffusion/CMakeLists.txt
@@ -29,10 +29,11 @@ set_tests_properties(unit:diffusion1 PROPERTIES
   FIXTURES_SETUP GemDiff)
 win32_env(unit:diffusion1)
 
-add_test(NAME unit:diffusion1:python
-  COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_diffusion1D.py ${_tmpdifffn})
-set_tests_properties(unit:diffusion1:python PROPERTIES
-  TIMEOUT 10
-  REQUIRED_FILES ${_tmpdifffn}
-  FIXTURES_REQUIRED GemDiff
-  DISABLED ${python_disabled})
+if(python_ok)
+  add_test(NAME unit:diffusion1:python
+    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_diffusion1D.py ${_tmpdifffn})
+  set_tests_properties(unit:diffusion1:python PROPERTIES
+    TIMEOUT 10
+    REQUIRED_FILES ${_tmpdifffn}
+    FIXTURES_REQUIRED GemDiff)
+endif(python_ok)
