--- a/src/numerical/CMakeLists.txt
+++ b/src/numerical/CMakeLists.txt
@@ -1,15 +1,30 @@
-add_library(const OBJECT constants/phys_consts.F90)
-target_compile_definitions(const PRIVATE REALBITS=${realbits})
+# --- generate constants
+configure_file(constants/phys_consts.in.f90 phys_consts.f90)
+add_library(const OBJECT ${CMAKE_CURRENT_BINARY_DIR}/phys_consts.f90)
 
+# --- interpolation
 add_subdirectory(interpolation)
 
-add_library(mpimod OBJECT mpimod/mpimod.F90 mpimod/mpisend.f90 mpimod/mpirecv.f90 mpimod/mpihalo.f90)
-target_link_libraries(mpimod PRIVATE const MPI::MPI_Fortran)
-target_compile_definitions(mpimod PRIVATE REALBITS=${realbits})
+# --- mpi
+if(realbits EQUAL 32)
+  set(mpi_realprec mpi_real)
+else()
+  set(mpi_realprec mpi_double_precision)
+endif()
 
+configure_file(mpimod/mpimod.in.f90 mpimod.f90)
+
+add_library(mpimod OBJECT
+  ${CMAKE_CURRENT_BINARY_DIR}/mpimod.f90
+  mpimod/mpisend.f90 mpimod/mpirecv.f90 mpimod/mpihalo.f90)
+target_link_libraries(mpimod PRIVATE const MPI::MPI_Fortran)
+
+# --- grid
 add_subdirectory(grid)
 
-add_library(calculus OBJECT calculus/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
+# --- calculus
+add_library(calculus OBJECT
+  calculus/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
 target_link_libraries(calculus PRIVATE mesh)
 
 add_subdirectory(diffusion)
