Squashed commit of the following:
commit 2b67282c6728a671b5d1d3bcf3aa4e6c5f60618a
Author: Michael Hirsch <scivision@users.noreply.github.com>
Date:   Wed Apr 8 16:19:18 2020 -0400

    ig

commit 8f7c7c91d8c379485f28c34cac06f104093a232b
Author: Michael Hirsch <scivision@users.noreply.github.com>
Date:   Wed Apr 8 16:08:18 2020 -0400

    lapack95 vendor: don't require real32 unless Gemini is in real32 mode

--- a/src/temporal/CMakeLists.txt
+++ b/src/temporal/CMakeLists.txt
@@ -16,4 +16,4 @@ add_test(NAME unit:DateRollover COMMAND test_rollover)
 
 add_executable(test_sza test_sza.f90)
 target_link_libraries(test_sza PRIVATE timeutils const)
-add_test(NAME unit:SolarZenithAngle COMMAND test_sza)
+add_test(NAME unit:SolarZenithAngle COMMAND $<TARGET_FILE:test_sza>)
