move python code to src/gemini3d
packageize web

use python package path

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gemini3d
-version = 0.5.2
+version = 0.5.6
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
 description = 3-D ionospheric model plotting suite
@@ -38,6 +38,11 @@ install_requires =
   numpy >= 1.16.0
   scipy
   h5py
+package_dir=
+    =src
+
+[options.packages.find]
+where=src
 
 [options.extras_require]
 tests =
@@ -48,9 +53,8 @@ lint =
   flake8-builtins
   flake8-blind-except
   mypy
-all =
-  xarray
-  scipy
+plots =
+  mayavi
   matplotlib >= 3.1
 
 [flake8]
