--- a/src/numerical/CMakeLists.txt
+++ b/src/numerical/CMakeLists.txt
@@ -5,6 +5,19 @@ add_library(const OBJECT ${CMAKE_CURRENT_BINARY_DIR}/phys_consts.f90)
 # --- interpolation
 add_subdirectory(interpolation)
 
+# --- grid
+add_subdirectory(grid)
+
+# --- calculus
+add_library(calculus OBJECT
+  calculus/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
+target_link_libraries(calculus PRIVATE mesh)
+
+if(NOT MPI_OK)
+  set_targ_props(calculus const interp mesh)
+  return()
+endif()
+
 # --- mpi
 if(realbits EQUAL 32)
   set(mpi_realprec mpi_real)
@@ -19,14 +32,6 @@ add_library(mpimod OBJECT
   mpimod/mpisend.f90 mpimod/mpirecv.f90 mpimod/mpihalo.f90)
 target_link_libraries(mpimod PRIVATE const MPI::MPI_Fortran)
 
-# --- grid
-add_subdirectory(grid)
-
-# --- calculus
-add_library(calculus OBJECT
-  calculus/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
-target_link_libraries(calculus PRIVATE mesh)
-
 add_subdirectory(diffusion)
 
 # -- more libs
@@ -36,9 +41,4 @@ target_link_libraries(advec PRIVATE const mpimod grid mesh)
 
 add_subdirectory(potential)
 
-
-foreach(t advec calculus const diffusion grid interp mesh mpimod mumps_interface PDEelliptic PDEparabolic potential)
-  target_include_directories(${t} INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
-  set_target_properties(${t} PROPERTIES
-    Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
-endforeach()
+set_targ_props(advec calculus const diffusion grid interp mesh mpimod mumps_interface PDEelliptic PDEparabolic potential)
