--- a/src/temporal/CMakeLists.txt
+++ b/src/temporal/CMakeLists.txt
@@ -1,10 +1,7 @@
-add_library(temporal OBJECT temporal.f90)
-target_link_libraries(temporal PRIVATE const mesh mpimod MPI::MPI_Fortran)
-
 add_library(timeutils OBJECT timeutils.f90)
 target_link_libraries(timeutils PRIVATE const)
 
-# -- optional tests
+# --- unit tests
 
 add_executable(test_formats test_formats.f90)
 target_link_libraries(test_formats PRIVATE timeutils const)
@@ -17,3 +14,8 @@ add_test(NAME unit:DateRollover COMMAND test_rollover)
 add_executable(test_sza test_sza.f90)
 target_link_libraries(test_sza PRIVATE timeutils const)
 add_test(NAME unit:SolarZenithAngle COMMAND $<TARGET_FILE:test_sza>)
+
+if(MPI_OK)
+  add_library(temporal OBJECT temporal.f90)
+  target_link_libraries(temporal PRIVATE const mesh mpimod MPI::MPI_Fortran)
+endif(MPI_OK)
