--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
 
-  cmake:
+  hdf5:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -34,6 +34,28 @@ jobs:
       env:
         FC: gfortran
 
+  no_mpi:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.8'
+    - run: pip install -e .
+
+    - name: Install packages
+      run: |
+        sudo apt update -yq
+        sudo apt install -yq --no-install-recommends gfortran libhdf5-dev
+
+    - name: build without MPI
+      run: |
+        cmake -B build -Dno_mpi:BOOL=true
+        cmake --build build
+
+    - name: test without MPI
+      run: ctest -V
+      working-directory: build
 
   cmakeBuildAllLibs:
     if: false
